# Perceptron

./: CMakeLists.txt  README.md  dataSet.h  dataset.c  iris_simple.csv  main.c  perceptron.c  perceptron.h  simpleIris2.csv  visual.c  visual.h
Livrables/: LivrableFinal.docx  Livrables de Conception.docx  ~$vrableFinal.docx
